--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,22 @@ body {
     font-weight: 700;
     text-align: center;
 }
+
+.game-container {
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 100px;
+    max-width: 1120px;
+    margin: auto;
+}
+
+.sketch-board {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 0 0 550px;
+    height: 550px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
