--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     gap: 100px;
-    max-width: 1120px;
+    max-width: 1100px;
     margin: auto;
 }
 
@@ -34,3 +34,88 @@ body {
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.settings > * {
+    transition: all 0.3s ease;
+}
+
+.settings > *:hover {
+    scale: 1.075;
+}
+
+.color-wheel {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 80px;
+    height: 80px;
+    border: none;
+    background-color: transparent;
+}
+   
+.color-wheel::-webkit-color-swatch {
+    border-radius: 50%;
+    border: none;
+}
+
+.btn {
+    width: 180px;
+    padding: 10px 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: transparent;
+}
+
+.btn:hover, .btn:focus {
+    color: white;
+    background-color: #333333;
+}
+
+.btn.reset:hover, .btn.reset:focus {
+    background-color: transparent;
+    color: black;
+}
+
+.slider-container {
+    text-align: center;
+    font-size: 17px;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 160px;
+    height: 10px;
+    margin-top: 14px;
+    border-radius: 5px;  
+    background: transparent;
+    outline: 1px solid black;
+    opacity: 1;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; 
+    background: #333333;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 15px;
+    border-radius: 50%;
+    background: #333333;
+    cursor: pointer;
+  }
