--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     align-items: center;
     gap: 100px;
     max-width: 1100px;
-    margin: auto;
+    margin: 100px auto 0 auto;
 }
 
 .sketch-board {
